Multiple small fixes

--- a/resources/main/agent.templ.html
+++ b/resources/main/agent.templ.html
@@ -67,12 +67,12 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>{{.SystemInfo.TotalMemory}}</td>
-                                        <td>{{.SystemInfo.CpuCores}}</td>
-                                        <td>{{.SystemInfo.KernelVersion}}</td>
-                                        <td>{{.SystemInfo.Platform}}</td>
-                                        <td>{{.SystemInfo.Family}}</td>
-                                        <td>{{.SystemInfo.Version}}</td>
+                                        <td>{{.Agent.SystemInfo.TotalMemory}}</td>
+                                        <td>{{.Agent.SystemInfo.CpuCores}}</td>
+                                        <td>{{.Agent.SystemInfo.KernelVersion}}</td>
+                                        <td>{{.Agent.SystemInfo.Platform}}</td>
+                                        <td>{{.Agent.SystemInfo.Family}}</td>
+                                        <td>{{.Agent.SystemInfo.Version}}</td>
                                     </tr>
 
 
