--- a/resources/main/dashboard.templ.html
+++ b/resources/main/dashboard.templ.html
@@ -70,32 +70,34 @@
                     </h3>
                 </div>
                 <div class="card-body">
-                    <table class="table text-center">
-                        <thead>
-                            <tr>
-                                <th scope="col">Name</th>
-                                <th scope="col">ID</th>
-                                <th scope="col">Last Connection</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {{range $offlineAgent := .OfflineAgents}}
-                            <tr>
-                                <td>
-                                    <a href="/agent/{{$offlineAgent.PubKey | Hex}}">
-                                        {{$offlineAgent.Name}} </a>
-                                </td>
-                                <td>
-                                    <a href="/agent/{{$offlineAgent.PubKey | Hex}}">
-                                        {{$offlineAgent.PubKey}} </a>
-                                </td>
-                                <td>
-                                    {{$offlineAgent.LastConnectionFrom}}
-                                </td>
-                            </tr>
-                            {{end}}
-                        </tbody>
-                    </table>
+                    <div class="table-responsive">
+                        <table class="table text-center">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">ID</th>
+                                    <th scope="col">Last Connection</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {{range $offlineAgent := .OfflineAgents}}
+                                <tr>
+                                    <td>
+                                        <a href="/agent/{{$offlineAgent.PubKey | Hex}}">
+                                            {{$offlineAgent.Name}} </a>
+                                    </td>
+                                    <td>
+                                        <a href="/agent/{{$offlineAgent.PubKey | Hex}}">
+                                            {{$offlineAgent.PubKey}} </a>
+                                    </td>
+                                    <td>
+                                        {{$offlineAgent.LastConnectionFrom}}
+                                    </td>
+                                </tr>
+                                {{end}}
+                            </tbody>
+                        </table>
+                    </div>
 
                 </div>
             </div>
@@ -112,27 +114,28 @@
                     </h3>
                 </div>
                 <div class="card-body">
-                    <table class="table text-center">
-                        <thead>
-                            <tr>
-                                <th scope="col">Endpoint</th>
-                                <th scope="col">Reason</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {{range $failedEndpoint := .FailedEndpoints}}
-                            <tr>
-                                <td>
-                                    {{$failedEndpoint.MonitorEntry.Path}}
-                                </td>
-                                <td>
-                                    {{$failedEndpoint.MonitorEntry.Reason}}
-                                </td>
-                            </tr>
-                            {{end}}
-                        </tbody>
-                    </table>
-
+                    <div class="table-responsive">
+                        <table class="table text-center">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Endpoint</th>
+                                    <th scope="col">Reason</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {{range $failedEndpoint := .FailedEndpoints}}
+                                <tr>
+                                    <td>
+                                        {{$failedEndpoint.MonitorEntry.Path}}
+                                    </td>
+                                    <td>
+                                        {{$failedEndpoint.MonitorEntry.Reason}}
+                                    </td>
+                                </tr>
+                                {{end}}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
