Add events list to agent

--- a/resources/main/agent.templ.html
+++ b/resources/main/agent.templ.html
@@ -87,6 +87,7 @@
     </div>
 
     {{template "Agent" (Wrap .Agent $.csrfField)}}
+    {{template "EventsList" .Agent}}
 
     <div class="row" style="padding-bottom: 2rem;">
         <div class="col">
