--- a/resources/main/agent_fragment.templ.html
+++ b/resources/main/agent_fragment.templ.html
@@ -28,7 +28,7 @@
                         </h3>
                     </div>
 
-                    <div class="col text-center">
+                    <div class="col text-right">
                         <h3>
                             {{if .Agent.CurrentlyConnected}}
                             <span class="badge badge-success">Online</span>
