--- a/resources/main/events_fragment.templ.html
+++ b/resources/main/events_fragment.templ.html
@@ -4,12 +4,13 @@
 <div class="row" style="padding-bottom: 2rem;">
     <div class="col">
         <div class="card">
-            <div class="card-header">
+            <div class="card-header text-center">
                 <h3>Events</h3>
             </div>
             <div class="card-body">
                 <div class="row align-items-center">
                     <div class="col">
+                        {{if .Events}}
                         <table class="table table-sm table-bordered">
                             <thead>
                                 <tr>
@@ -29,6 +30,11 @@
                                 {{end}}
                             </tbody>
                         </table>
+                        {{else}}
+                        <h3 class="text-center">
+                            No Events Found
+                        </h3>
+                        {{end}}
                     </div>
                 </div>
 
